tests/ui/const-generics/issues/issue-71381.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71381.rs:14:82
   |
LL |     pub fn call_me<Args: Sized, const IDX: usize, const FN: unsafe extern "C" fn(Args)>(&self) {
   |                                                                                  ^^^^ the type must not depend on the parameter `Args`

error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-71381.rs:23:40
   |
LL |         const FN: unsafe extern "C" fn(Args),
   |                                        ^^^^ the type must not depend on the parameter `Args`

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71381.rs:14:61
   |
LL |     pub fn call_me<Args: Sized, const IDX: usize, const FN: unsafe extern "C" fn(Args)>(&self) {
   |                                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: using function pointers as const generic parameters is forbidden
  --> $DIR/issue-71381.rs:23:19
   |
LL |         const FN: unsafe extern "C" fn(Args),
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0770`.
